// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node List should not print before resized 1`] = `
<div
  className="root"
>
  <header
    className="header"
    data-focused={false}
  >
    loc
  </header>
  <div
    className="resizeContainer"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;

exports[`Project Node List should select a node locating same the index of cursor when focused 1`] = `
<div
  className="root"
>
  <header
    className="header"
    data-focused={true}
  >
    loc
  </header>
  <div
    className="resizeContainer"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;

exports[`Project Node List should show dummy content when nodes is empty 1`] = `
<div
  className="root"
>
  <header
    className="header"
    data-focused={true}
  >
    loc
  </header>
  <div
    className="resizeContainer"
    style={
      Object {
        "overflow": "visible",
      }
    }
  />
</div>
`;
